--- a/src/app/forms/administrations/project-type-division/project-type-division.manage.html
+++ b/src/app/forms/administrations/project-type-division/project-type-division.manage.html
@@ -1,4 +1,4 @@
-<div *transloco="let t; read: 'page_project_type_division_component'" style="height: 100%;">
+<div *transloco="let t; read: TRANSLOCO" style="height: 100%;">
   <div class="content-page-header">
     <app-common-header
       (filterChanged)="doSimpleSearch($event)"
