--- a/src/app/forms/administrations/budget-forecast/budget-forecast.manage.html
+++ b/src/app/forms/administrations/budget-forecast/budget-forecast.manage.html
@@ -12,12 +12,12 @@
       </div>
 
       <div hideIfUnauthorized="PROJECTTYPE_FILTER|BUDGETBASE" class="filter-content-item child-w-200 mt-15">
-        <project-types-item-select [(ngModel)]="projectType" selectionType="multiple" placeholder="Proiect" displayValue="name" showMinimizedPlaceHolder="true">
+        <project-types-item-select [(ngModel)]="projectType" selectionType="multiple" placeholder="{{t ('projects_label')}}" displayValue="name" showMinimizedPlaceHolder="true">
         </project-types-item-select>
       </div>
 
       <div hideIfUnauthorized="DIVISION_FILTER|BUDGETBASE" class="filter-content-item child-w-200 mt-15">
-        <divisions-item-select [(ngModel)]="divisions" [params]="divisionParams" selectionType="multiple" placeholder="Departamente" displayValue="name" showMinimizedPlaceHolder="true">
+        <divisions-item-select [(ngModel)]="divisions" [params]="divisionParams" selectionType="multiple" placeholder="{{t ('divisions_label')}}" displayValue="name" showMinimizedPlaceHolder="true">
         </divisions-item-select>
       </div>
 
@@ -74,12 +74,12 @@
           </svg>
         </a>
       </div>
-      <div hideIfUnauthorized="IMPORT|BUDGETBASE" class="refresh subheader-actions-wrapper subheader-action-text_inline" style="min-width: auto;">
+      <!-- <div hideIfUnauthorized="IMPORT|BUDGETBASE" class="refresh subheader-actions-wrapper subheader-action-text_inline" style="min-width: auto;">
         <a (click)="uploadBudgetFile()" class="d-flex" style="color: inherit;">
           <mat-icon>upload_file</mat-icon>
           Import
         </a>
-      </div>
+      </div> -->
       <div hideIfUnauthorized="EXPORT|BUDGETBASE" class="refresh subheader-actions-wrapper subheader-action-text_inline" style="min-width: auto;">
         <a (click)="export()" class="d-flex" style="color: inherit;">
           <svg xmlns="http://www.w3.org/2000/svg" width="23" height="22" viewBox="0 0 24 24"> <g> <path fill="none" d="M0 0h24v24H0z"/> <path d="M2.859 2.877l12.57-1.795a.5.5 0 0 1 .571.495v20.846a.5.5 0 0 1-.57.495L2.858 21.123a1 1 0 0 1-.859-.99V3.867a1 1 0 0 1 .859-.99zM4 4.735v14.53l10 1.429V3.306L4 4.735zM17 19h3V5h-3V3h4a1 1 0 0 1 1 1v16a1 1 0 0 1-1 1h-4v-2zm-6.8-7l2.8 4h-2.4L9 13.714 7.4 16H5l2.8-4L5 8h2.4L9 10.286 10.6 8H13l-2.8 4z"/> </g> </svg>
@@ -124,8 +124,8 @@
   <app-budget-forecast-list #budgetList id="budgetList"
                             [dataSource]="budgetForecastHttpService"
                             listTemplate="BUDGETFORECASTS"
-                            sortColumn="budgetForecast.id"
-                            sortDirection="asc"
+                            sortColumn="budgetForecast.modifiedAt"
+                            sortDirection="desc"
                             dynamicQuery="true"
                             usePaging="true"
                             showSimpleSearch="false"
